[package]
name = "dleq-tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dependencies]
# To create secp256k1 non-interactive proofs and serialize them
sigma_fun = { version = "0.3.2-alpha.0", default-features = false, features = ["secp256k1", "ed25519", "serde", "alloc"] }
ecdsa_fun = { version = "0.6.2-alpha.0", default-features = false, features = [ "libsecp_compat", "serde", "adaptor" ] }
# you need a hash function and an rng for non-interactive proofs
rand_chacha = "0.3"
sha2 = "0.9.8"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4" }
conquer-once = "0.3"
rand = { version = "0.8" }
bincode = "1.3.1"
hex = "0.4"
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen = "0.2.90"
